--- a/style.css
+++ b/style.css
@@ -3,3 +3,35 @@
 	padding: 0;
 	box-sizing: border-box;
 }
+
+.main-visual-content1 {
+	width: 100%;
+	height: 200px;
+	background-image: url(img/box1.jpg);
+	background-position: center;
+	background-size: cover;
+}
+
+.main-visual-content2 {
+	width: 100%;
+	height: 200px;
+	background-image: url(img/box2.jpg);
+	background-position: center;
+	background-size: cover;
+}
+
+.main-visual-content3 {
+	width: 100%;
+	height: 200px;
+	background-image: url(img/box3.jpg);
+	background-position: center;
+	background-size: cover;
+}
+
+.main-visual-content4 {
+	width: 100%;
+	height: 200px;
+	background-image: url(img/box4.jpg);
+	background-position: center;
+	background-size: cover;
+}
